[package]
name        = "vkgen"
license     = "MIT"
version     = "2.3.0"
authors     = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition     = "2021"
description = "Generates Rust source code from the Vulkan/OpenXR registry"
repository  = "https://gitlab.com/TobiP64/vkgen"
readme      = "README.md"
keywords    = ["vulkan", "vk", "generator", "openxr", "xr"]
categories  = ["command-line-utilities", "game-development"]

[lib]
doctest = false

[features]
xml_dbg = []

[dependencies]
serde = { version = "^1.0", features = ["serde_derive"] }
